--- a/fixtures/workers-with-assets/package.json
+++ b/fixtures/workers-with-assets/package.json
@@ -9,10 +9,9 @@
 		"type:tests": "tsc -p ./tests/tsconfig.json"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-tsconfig": "workspace:*",
 		"@cloudflare/workers-types": "^4.20240821.1",
 		"undici": "^5.28.4",
-		"wrangler": "workspace:*"
+		"wrangler": "3.74.0"
 	},
 	"volta": {
 		"extends": "../../package.json"
